# qt-opencv-samples

./: .clang-format  CMakeLists.txt  LICENSE  README.md
include/qt_opencv_samples/blur/: Blur.h
include/qt_opencv_samples/canny/: Canny.h
include/qt_opencv_samples/common/: OneInputOneOutput.h  OneInputTwoOutput.h
include/qt_opencv_samples/detect/: DetectCorners.h  DetectObjects.h
include/qt_opencv_samples/equalize/: Equalize.h
include/qt_opencv_samples/flip/: Flip.h
include/qt_opencv_samples/perspective/: Perspective.h
include/qt_opencv_samples/rotation/: Rotation.h
include/qt_opencv_samples/threshold/: Threshold.h
src/: MainWindow.qml  img.qrc  main.cpp  qml.qrc  res.qrc
src/qt_opencv_samples/blur/: Blur.cpp  BlurView.qml
src/qt_opencv_samples/canny/: Canny.cpp  CannyView.qml
src/qt_opencv_samples/common/: OneInputOneOutput.cpp  OneInputTwoOutput.cpp
src/qt_opencv_samples/detect/: DetectCorners.cpp  DetectCornersView.qml  DetectObjects.cpp  DetectObjectsView.qml
src/qt_opencv_samples/equalize/: Equalize.cpp  EqualizeView.qml
src/qt_opencv_samples/flip/: Flip.cpp  FlipView.qml
src/qt_opencv_samples/perspective/: Perspective.cpp  PerspectiveView.qml
src/qt_opencv_samples/rotation/: Rotation.cpp  RotationView.qml
src/qt_opencv_samples/threshold/: Threshold.cpp  ThresholdView.qml
